<resources>
    <string name="app_name">ShiftLab_test_task</string>
    <string name="registration_tittle">Регистрация</string>
    <string name="registration">Загегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="restore_data">Последние данные</string>
    <string name="main_screen_tittle">Главный экран</string>
    <string name="demonstrate_user_data">Показать приветствие</string>

    <string name="SHARED_PREFS_RESTORE">shared_prefs_restore</string>
    <string name="SHARED_PREFS_USER">shared_prefs_user</string>
    <string name="KEY_USER_NAME">user_name</string>
    <string name="KEY_USER_SURNAME">user_surname</string>
    <string name="KEY_USER_EMAIL">user_email</string>
    <string name="KEY_USER_PASSWORD">user_password</string>

    <string name="empty_field">Заполните поле!</string>
    <string name="invalid_name_message">Имя должно начинаться с заглавной буквы, длина имени - не менее двух букв</string>
    <string name="invalid_surname_message">Фамилия должна начинаться с заглавной буквы, длина фамилии - не менее двух букв</string>
    <string name="invalid_email_message">Email должен содержать символ @, заканчиваться на .com или .ru</string>
    <string name="invalid_password_message">Пароль должен содержать строчные и прописные латинские буквы, цифры</string>
    <string name="no_saved_data">Нет сохраненных данных</string>
    <string name="choose_data_of_borth_type">Выберите дату рождения</string>
    <string name="button_Ok_tittle">Ок</string>
    <string name="button_cancel_tittle">Отмена</string>
    <string name="name_field">Имя</string>
    <string name="surname_field">Фамилия</string>
    <string name="email_field">Email</string>
    <string name="password_field">Пароль</string>
    <string name="repeat_password_field">Повторите пароль</string>
    <string name="birthday_tiitle">Дата рождения</string>
    <string name="birthday_value">01.01.2003</string>
    <string name="invalid_password_repeat_message">Пароли не совпадают</string>
    <string name="KEY_USER_PASSWORD_REPEAT">user_password_repeat</string>
    <string name="neutral_button_alert_dialog_text">Ясно</string>

</resources>