<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.BottomSheet">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_gray"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/button_cancel_tittle"
            android:textColor="@color/black"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/button_Ok_tittle"
            android:textColor="@color/black"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/bottom_sheet_tittle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/choose_data_of_borth_type"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            app:layout_constraintWidth_percent="0.4" />

        <NumberPicker
            android:id="@+id/mounth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/black"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonOK"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_tittle"
            app:layout_constraintVertical_bias="0.493">
        </NumberPicker>

        <NumberPicker
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="@+id/buttonOK"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_tittle"
            app:layout_constraintVertical_bias="0.493">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:theme="@style/AppTheme.Picker"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonOK"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toStartOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_tittle"
            app:layout_constraintVertical_bias="0.493">
        </NumberPicker>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>